--- a/package.json
+++ b/package.json
@@ -3,13 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@iconscout/react-unicons": "^2.0.2",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.52.0",
+    "axios": "^1.7.4",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
+    "firebase": "^10.13.0",
+    "framer-motion": "^11.3.27",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
+    "react-circular-progressbar": "^2.1.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
+    "react-router": "^6.26.1",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "redux": "^5.0.1",
+    "styled-components": "^6.1.12",
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
+    "xlsx-style": "^0.8.13",
+    "yarn": "^1.22.22"
   },
   "scripts": {
     "start": "react-scripts start",
